Star rating fix alignment

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -20,3 +20,7 @@
 .card-wrapper{
     height: auto !important;
 }
+
+.trustspot-inline-rating{
+    text-align: left;
+}
